Extend HotSpot Rift store guards